<resources>
    <string name="app_name">To Do List</string>
    <string name="add_word">Add Word</string>
    <string name="hint_title">To Do Title</string>
    <string name="hint_content">Insert Content Here</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="channel_name">ToDoList Notification Channel</string>
    <string name="Done">Done?</string>
    <string name="date_time">Time</string>

</resources>