<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/todo_item_title"
            android:background="@drawable/edit_text_border"
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_title"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/todo_item_date_time"
            android:background="@drawable/edit_text_border"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/date_time"
            android:inputType="datetime"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp"
            android:padding="10dp"
            android:autofillHints="" />
    </LinearLayout>


    <EditText
        android:id="@+id/todo_item_content"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_content"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:gravity="top"
        android:textSize="16sp"
        android:padding="10dp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/Done"
            android:textSize="25sp"/>

        <CheckBox
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />
    </LinearLayout>

</LinearLayout>